// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly and match snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3973AC",
          "borderRadius": 4,
          "borderWidth": 0,
          "display": "flex",
          "elevation": 9,
          "flexDirection": "row",
          "gap": 16,
          "justifyContent": "center",
          "margin": 0,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "position": "relative",
          "shadowColor": "rgba(0, 0, 0, 0.75)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.32,
          "shadowRadius": 5.46,
          "textDecorationLine": "none",
          "userSelect": "none",
        }
      }
      testID="custom-button"
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "fontWeight": "500",
              "letterSpacing": 0.46,
              "lineHeight": 26,
              "textTransform": "uppercase",
            },
            false,
            false,
            undefined,
            undefined,
          ]
        }
      >
        Test Button
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Button should render correctly with disabled state and match snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#0000001F",
          "borderRadius": 4,
          "borderWidth": 0,
          "color": "rgba(0, 0, 0, 0.38)",
          "display": "flex",
          "elevation": 0,
          "flexDirection": "row",
          "gap": 16,
          "justifyContent": "center",
          "margin": 0,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "position": "relative",
          "shadowColor": "rgba(0, 0, 0, 0.75)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.32,
          "shadowRadius": 5.46,
          "textDecorationLine": "none",
          "userSelect": "none",
        }
      }
      testID="custom-button"
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "fontWeight": "500",
              "letterSpacing": 0.46,
              "lineHeight": 26,
              "textTransform": "uppercase",
            },
            false,
            false,
            {
              "color": "rgba(0, 0, 0, 0.38)",
            },
            undefined,
          ]
        }
      >
        Test Button
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Button should render correctly with loading state and match snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3973AC",
          "borderRadius": 4,
          "borderWidth": 0,
          "display": "flex",
          "elevation": 9,
          "flexDirection": "row",
          "gap": 16,
          "height": 42.5,
          "justifyContent": "center",
          "margin": 0,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "position": "relative",
          "shadowColor": "rgba(0, 0, 0, 0.75)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.32,
          "shadowRadius": 5.46,
          "textDecorationLine": "none",
          "userSelect": "none",
        }
      }
      testID="custom-button"
    >
      <ActivityIndicator
        color="#FFFFFF"
        style={
          {
            "height": 20,
          }
        }
      />
    </View>
  </View>
</RNCSafeAreaProvider>
`;
